# video-coding

./: .gitignore  LICENSE  README.md  dune  dune-project  hardcaml_video_codecs.opam
.github/workflows/: main.yml
common/src/: dune  frame.ml  offset.mli  plane.ml  plane.mli
jpeg/: README.md
jpeg/docs/: dune  index.md
jpeg/hardcaml/cram_tests/: dune  test-env.sh  test-toplevel-decoder.t
jpeg/hardcaml/src/: bitstream_reader.ml  bitstream_reader.mli  bitstream_writer.ml  bitstream_writer.mli  bytestream_decoder.ml  bytestream_decoder.mli  clocking.ml  clocking.mli  codeblock_decoder.ml  dune  (+34 more)
jpeg/model/: bitstream_reader.mli  dct.ml  dct.mli  dune  frame.ml  marker_code.ml  markers.ml  model.ml  model.mli  plane.ml  plane.mli  tables.mli  zigzag.ml
jpeg/src/: bitstream_reader.ml  bitstream_reader.mli  clocking.ml  clocking.mli  dct.ml  dct.mli  dune  vld.ml  vld.mli
jpeg/test/: decoder.expected  dune  model-encode-and-decode.t  mouse-decode.t  test-env.sh  test-nonstandard-sizes.t  test_bitstream_reader.ml  test_chen_dct.ml  test_dct.ml  test_dct.mli  test_dct_fixed.ml  test_dct_fixed.mli  test_reference_dct.ml  test_reference_dct.mli  test_transform_matrices.ml  test_vld.ml
jpeg/test_data/: mini64x64.420  mini64x64.422  mini64x64.444
oplay/: dune  oplay.ml
tools/: README.md
tools/src/: dune  ocompare.ml  ocompare.mli  oconv.ml  oconv.mli  ocrop.ml  ocrop.mli  offset.ml  oplay.ml  oplay.mli  packed_422.ml  packed_422.mli  planar_444.ml  planar_444.mli  range.ml  range.mli  size.ml  size.mli  stdsizes.ml  yuv.ml  yuv.mli  yuv_format.ml  yuv_format.mli
(+73 files in other folders)
